set perm gen size